--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "fake-fetch": "^2.0.0",
     "jsdom": "^13.0.0",
     "redux-devtools": "^3.4.1"
   }
