--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "es6-promise": "^4.2.5",
     "express": "^4.16.3",
     "isomorphic-fetch": "^2.2.1",
+    "mongoose": "^5.4.0",
     "nodemon": "^1.18.4",
     "prop-types": "^15.6.2",
     "ramda": "^0.25.0",
